[project]
name = "yacs"
version = "0.1.0"
description = "YACS - Yet Another CVE Searcher"
authors = [{ name = "Sean Dahan", email = "sean@seandahan.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dependencies = [
    "cpe-utils>=0.1.0",
    "loguru>=0.7.3",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "pydantic>=2.10.6",
    "pymongo>=4.11.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
]

[project.urls]
Homepage = "https://github.com/Frostn1/yacs"
Issues = "https://github.com/Frostn1/yacs/issues"

[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"
